fix jumping images (#152)

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,4 +1,6 @@
 .row-logo {
+  width: 36px;
+  height: 36px;
   max-width: 36px;
   max-height: 36px;
   border-radius: 10px;
